--- a/casestudy.html
+++ b/casestudy.html
@@ -100,7 +100,7 @@
 								<a href="case4.html">
 									<h2>Case 4</h2>
 									<div class="content">
-										<p>SQL Water Sources Analysis to sent AID</p>
+										<p>Water Source Analysis for International Public Health</p>
 									</div>
 								</a>
 							</article>
