--- a/casestudy.html
+++ b/casestudy.html
@@ -89,7 +89,7 @@
 								<a href="case3.html">
 									<h2>Case 3</h2>
 									<div class="content">
-										<p>SQL Data Cleaning for Nashville Housing</p>
+										<p>Data Cleaning for Nashville Housing (SQL)</p>
 									</div>
 								</a>
 							</article>
@@ -100,7 +100,7 @@
 								<a href="case4.html">
 									<h2>Case 4</h2>
 									<div class="content">
-										<p>Water Source Analysis for International Public Health</p>
+										<p>Water Source Analysis for International Public Health (SQL, Tableau)</p>
 									</div>
 								</a>
 							</article>
@@ -111,7 +111,7 @@
 								<a href="case5.html">
 									<h2>Case 5</h2>
 									<div class="content">
-										<p>AirBnb Rent Analysis</p>
+										<p>Data-Driven Insights for Investing in Seattle's Airbnb Market (Tableau)</p>
 									</div>
 								</a>
 							</article>
