--- a/case1.html
+++ b/case1.html
@@ -47,25 +47,13 @@
 
 		
 
-				<!-- Description -->
-				
-				<div id="main">
-					<div class="inner">
-						<h1>Description</h1>
-						<p>By analyzing the data in the SalesData table, we were able to achieve several company goals. We identified unique values in various columns such as status, year_id, product line, country, deal size, and month_id. We also performed sales analysis by grouping the sales by product line, year, and deal size, and calculated the sum of sales for each category. Additionally, we were able to determine the best month for sales in a specific year, the best-selling product in the United States, and the city with the highest number of sales in a specific country. Using RFM analysis, we were able to identify the best customer and segment them based on their RFM scores. Achieving these goals has provided valuable insights that can inform strategic decision-making and drive business growth.</p>
-					</div>
-				</div>
-
 				<!-- Main -->
 				<div id="main">
 					<div class="inner">
 						<header>
-							<h1>Work<br />
+							<h1>Transportation Company Sales Data Analysis<br />
 							 <a href="http://html5up.net"></a></h1>
-							<p>Hands-on practice for data analysis skills
-								<a href="https://github.com/HyxerPyth">@GitHub</a>
-				
-							</p>
+							<p>y analyzing the data in the SalesData table, we were able to achieve several company goals. We identified unique values in various columns such as status, year_id, product line, country, deal size, and month_id. We also performed sales analysis by grouping the sales by product line, year, and deal size, and calculated the sum of sales for each category. Additionally, we were able to determine the best month for sales in a specific year, the best-selling product in the United States, and the city with the highest number of sales in a specific country. Using RFM analysis, we were able to identify the best customer and segment them based on their RFM scores. Achieving these goals has provided valuable insights that can inform strategic decision-making and drive business growth.</p>
 						</header>
 						<section class="tiles">
 							<article class="style1">
@@ -117,8 +105,8 @@
 						<section>
 							<h2>Follow</h2>
 							<ul class="icons">
-								<li><a href="#" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
-								<li><a href="#" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
+								<li><a href="https://github.com/HyxerPyth" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
+								<li><a href="mailto:roman.loboda003@gmail.com" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
 							</ul>
 						</section>
 						<ul class="copyright">
