--- a/case2.html
+++ b/case2.html
@@ -47,25 +47,13 @@
 
 		
 
-				<!-- Description -->
-				
-				<div id="main">
-					<div class="inner">
-						<h1>Description</h1>
-						<p>I was able to analyze bike sales of international company which have branches located in different regions of the world like Europe, North America and the Pacific. I was able to identify how average annual income, marital status, gender and degree level drives people's decisions about buying the bikes. By using the interactive dashboard that I created we can identify which group of people would be the main priority to build a targeted advertisement strategy for the marketing department. These valuable insights can inform strategic decision-making and drive business growth. </p>
-					</div>
-				</div>
-
 				<!-- Main -->
 				<div id="main">
 					<div class="inner">
 						<header>
-							<h1>Work<br />
+							<h1>Identifying Target Markets for Bike Sales: An International Study<br />
 							 <a href="http://html5up.net"></a></h1>
-							<p>Hands-on practice for data analysis skills
-								<a href="https://github.com/HyxerPyth">@GitHub</a>
-				
-							</p>
+							<p>I was able to analyze bike sales of international company which have branches located in different regions of the world like Europe, North America and the Pacific. I was able to identify how average annual income, marital status, gender and degree level drives people's decisions about buying the bikes. By using the interactive dashboard that I created we can identify which group of people would be the main priority to build a targeted advertisement strategy for the marketing department. These valuable insights can inform strategic decision-making and drive business growth. </p>
 						</header>
 						<section class="tiles">
 							<article class="style1">
@@ -106,8 +94,8 @@
 						<section>
 							<h2>Follow</h2>
 							<ul class="icons">
-								<li><a href="#" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
-								<li><a href="#" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
+								<li><a href="https://github.com/HyxerPyth" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
+								<li><a href="mailto:roman.loboda003@gmail.com" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
 							</ul>
 						</section>
 						<ul class="copyright">
