--- a/case3.html
+++ b/case3.html
@@ -47,25 +47,13 @@
 
 		
 
-				<!-- Description -->
-				
-				<div id="main">
-					<div class="inner">
-						<h1>Description</h1>
-						<p>Cleaning Nashville Housing Data was crucial and we achieved several company goals. Firstly, standardizing the date format and populating the property address data helped in reducing inconsistencies and inaccuracies in the data, making it easier to analyze and use in decision-making processes. Secondly, breaking out the address into individual columns enabled better analysis of the data, leading to insights into housing trends and patterns. Thirdly, removing duplicates and unused columns streamlined the data, saving storage space and reducing the time required for analysis. Lastly, changing "Y" and "N" to "Yes" and "No" in "Sold as Vacant" field made the data more consistent, reducing the risk of errors in analysis. Overall, cleaning the Nashville Housing Data has helped achieve the company goals of making data-driven decisions, improving operational efficiency, and reducing the risk of errors in analysis.</p>
-					</div>
-				</div>
-
 				<!-- Main -->
 				<div id="main">
 					<div class="inner">
 						<header>
-							<h1>Work<br />
+							<h1>Data Cleaning for Nashville Housing<br />
 							 <a href="http://html5up.net"></a></h1>
-							<p>Hands-on practice for data analysis skills
-								<a href="https://github.com/HyxerPyth">@GitHub</a>
-				
-							</p>
+							<p>Cleaning Nashville Housing Data was crucial and we achieved several company goals. Firstly, standardizing the date format and populating the property address data helped in reducing inconsistencies and inaccuracies in the data, making it easier to analyze and use in decision-making processes. Secondly, breaking out the address into individual columns enabled better analysis of the data, leading to insights into housing trends and patterns. Thirdly, removing duplicates and unused columns streamlined the data, saving storage space and reducing the time required for analysis. Lastly, changing "Y" and "N" to "Yes" and "No" in "Sold as Vacant" field made the data more consistent, reducing the risk of errors in analysis. Overall, cleaning the Nashville Housing Data has helped achieve the company goals of making data-driven decisions, improving operational efficiency, and reducing the risk of errors in analysis.</p>
 						</header>
 						<section class="tiles">
 							<article class="style1">
@@ -106,8 +94,8 @@
 						<section>
 							<h2>Follow</h2>
 							<ul class="icons">
-								<li><a href="#" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
-								<li><a href="#" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
+								<li><a href="https://github.com/HyxerPyth" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
+								<li><a href="mailto:roman.loboda003@gmail.com" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
 							</ul>
 						</section>
 						<ul class="copyright">
