--- a/case4.html
+++ b/case4.html
@@ -45,26 +45,15 @@
 					</ul>
 				</nav>
 
-				<!-- Description -->
-		
-					<div id="main">
-						<div class="inner">
-							<h1>Description</h1>
-							<p>The analysis of water sources serves as an essential step for the international organization to achieve their goal of improving public health and reducing waterborne diseases incidence. By identifying and analyzing the use of unsafe water sources in different countries, the organization can prioritize their resources and efforts to provide clean and safe water to those who need it the most. Through this analysis, the organization can also identify the specific areas where infrastructure and policy changes are needed to improve access to safe water sources, which can ultimately save lives and improve the overall well-being of the population. </p>
-						</div>
-					</div>
 
 				<!-- Main -->
 				
 				<div id="main">
 					<div class="inner">
 						<header>
-							<h1>Work<br />
+							<h1>Water Source Analysis for International Public Health<br />
 							 <a href="http://html5up.net"></a></h1>
-							<p>Hands-on practice for data analysis skills
-								<a href="https://github.com/HyxerPyth">@GitHub</a>
-				
-							</p>
+							<p>The analysis of water sources serves as an essential step for the international organization to achieve their goal of improving public health and reducing waterborne diseases incidence. By identifying and analyzing the use of unsafe water sources in different countries, the organization can prioritize their resources and efforts to provide clean and safe water to those who need it the most. Through this analysis, the organization can also identify the specific areas where infrastructure and policy changes are needed to improve access to safe water sources, which can ultimately save lives and improve the overall well-being of the population. </p>
 						</header>
 						<section class="tiles">
 							<article class="style1">
@@ -116,8 +105,8 @@
 						<section>
 							<h2>Follow</h2>
 							<ul class="icons">
-								<li><a href="#" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
-								<li><a href="#" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
+								<li><a href="https://github.com/HyxerPyth" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
+								<li><a href="mailto:roman.loboda003@gmail.com" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
 							</ul>
 						</section>
 						<ul class="copyright">
