--- a/case5.html
+++ b/case5.html
@@ -47,25 +47,13 @@
 
 		
 
-				<!-- Description -->
-				
-				<div id="main">
-					<div class="inner">
-						<h1>Description</h1>
-						<p>Analyzing the Airbnb dataset from Seattle helps achieve the company goal of finding the best location, number of bedrooms, and price to buy and rent an apartment in the city. By analyzing the dataset, we can identify which neighborhoods have the most demand for Airbnb rentals and which type of apartments are the most popular among guests. This information can help the company make informed decisions about investing in real estate properties that are more likely to generate high occupancy rates and profit. Additionally, the interactive map on the dashboard allows for easy visualization of different data by zip codes, which is useful for identifying trends and patterns in the market.</p>
-					</div>
-				</div>
-
 				<!-- Main -->
 				<div id="main">
 					<div class="inner">
 						<header>
-							<h1>Work<br />
+							<h1>Data-Driven Insights for Investing in Seattle's Airbnb Market<br />
 							 <a href="http://html5up.net"></a></h1>
-							<p>Hands-on practice for data analysis skills
-								<a href="https://github.com/HyxerPyth">@GitHub</a>
-				
-							</p>
+							<p>Analyzing the Airbnb dataset from Seattle helps achieve the company goal of finding the best location, number of bedrooms, and price to buy and rent an apartment in the city. By analyzing the dataset, we can identify which neighborhoods have the most demand for Airbnb rentals and which type of apartments are the most popular among guests. This information can help the company make informed decisions about investing in real estate properties that are more likely to generate high occupancy rates and profit. Additionally, the interactive map on the dashboard allows for easy visualization of different data by zip codes, which is useful for identifying trends and patterns in the market.</p>
 						</header>
 						<section class="tiles">
 							<article class="style1">
@@ -106,8 +94,8 @@
 						<section>
 							<h2>Follow</h2>
 							<ul class="icons">
-								<li><a href="#" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
-								<li><a href="#" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
+								<li><a href="https://github.com/HyxerPyth" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
+								<li><a href="mailto:roman.loboda003@gmail.com" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
 							</ul>
 						</section>
 						<ul class="copyright">
