--- a/casestudy.html
+++ b/casestudy.html
@@ -36,7 +36,7 @@
 					</header>
 
 				<!-- Menu -->
-					<<nav id="menu">
+					<nav id="menu">
 						<h2>Menu</h2>
 						<ul>
 							<li><a href="index.html">Home</a></li>
@@ -65,7 +65,7 @@
 								<a href="case1.html">
 									<h2>Case 1</h2>
 									<div class="content">
-										<p>Sales Data Transportation Company<br />
+										<p>Transportation Company Sales Data Analysis<br />
 											 (SQL, Tableau)</p>
 									</div>
 								</a>
@@ -77,7 +77,7 @@
 								<a href="case2.html">
 									<h2>Case 2</h2>
 									<div class="content">
-										<p>Bike Sales<br /> 
+										<p>Identifying Target Markets for Bike Sales: An International Study<br /> 
 											(Excel)</p>
 									</div>
 								</a>
@@ -89,7 +89,8 @@
 								<a href="case3.html">
 									<h2>Case 3</h2>
 									<div class="content">
-										<p>Data Cleaning for Nashville Housing (SQL)</p>
+										<p>Data Cleaning for Nashville Housing<br /> 
+										(SQL)</p>
 									</div>
 								</a>
 							</article>
@@ -100,7 +101,8 @@
 								<a href="case4.html">
 									<h2>Case 4</h2>
 									<div class="content">
-										<p>Water Source Analysis for International Public Health (SQL, Tableau)</p>
+										<p>Water Source Analysis for International Public Health<br />
+											(SQL, Tableau)</p>
 									</div>
 								</a>
 							</article>
@@ -111,7 +113,8 @@
 								<a href="case5.html">
 									<h2>Case 5</h2>
 									<div class="content">
-										<p>Data-Driven Insights for Investing in Seattle's Airbnb Market (Tableau)</p>
+										<p>Data-Driven Insights for Investing in Seattle's Airbnb Market<br />
+											(Tableau)</p>
 									</div>
 								</a>
 							</article>
@@ -141,8 +144,8 @@
 						<section>
 							<h2>Follow</h2>
 							<ul class="icons">
-								<li><a href="#" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
-								<li><a href="#" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
+								<li><a href="https://github.com/HyxerPyth" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
+								<li><a href="mailto:roman.loboda003@gmail.com" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
 							</ul>
 						</section>
 						<ul class="copyright">
