--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 					<div class="inner">
 						<section>
 							<h2>Get in touch</h2>
-							<form method="post" action="#">
+							<form method="post" action="https://formspree.io/f/xvondrjg">
 								<div class="fields">
 									<div class="field half">
 										<input type="text" name="name" id="name" placeholder="Name" />
@@ -107,8 +107,8 @@
 						<section>
 							<h2>Follow</h2>
 							<ul class="icons">
-								<li><a href="#" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
-								<li><a href="#" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
+								<li><a href="https://github.com/HyxerPyth" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
+								<li><a href="mailto:roman.loboda003@gmail.com" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
 							</ul>
 						</section>
 						<ul class="copyright">
@@ -118,6 +118,7 @@
 				</footer>
 
 		</div>
+
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
